finished about us alignment and fixed spacing

--- a/frontend/src/components/HomePage/FooterPage/footer.css
+++ b/frontend/src/components/HomePage/FooterPage/footer.css
@@ -10,14 +10,12 @@
 .organice__footer-heading {
     width: 100%;
     text-align: center;
-
-    margin-bottom: 3rem;
 }
 
 .organice__footer-heading h1 {
     font-family: var(--font-family);
     font-weight: 800;
-    font-size: 64px;
+    font-size: 32px;
     line-height: 75px;
 }
 
