--- a/frontend/src/components/HomePage/MeetPage/meet.css
+++ b/frontend/src/components/HomePage/MeetPage/meet.css
@@ -26,39 +26,36 @@
 .organice__mtt-heading {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    margin: 4rem 0 2rem;
+    justify-content: center;
 }
 
+
 .organice__mtt-heading h1 {
+    align-items: center;
     font-size: 34px;
     line-height: 45px;
     font-weight: 800;
     font-family: var(--font-family);
     max-width: 510px;
+    padding-bottom: 25px;
 }
 
-.organice__mtt-heading p {
-    font-family: var(--font-family);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 30px;
-    color: var(--color-subtext);
-    cursor: pointer;
-}
 
 .member-content {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     text-align: left;
-    margin-top: 2rem;
+    /* margin-top: 2rem; */
 }
 
-.oraganice__team{
+.organice__team{
     padding: 0 16px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.member{
+    padding-inline: 25px;
 }
